--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,8 @@ services:
       context: core
       dockerfile: build/Dockerfile.base
     command: ./manage.py runserver 0.0.0.0:8080
+    depends_on:
+      - db
     env_file: .env
     ports:
       - 1234:8080
@@ -31,6 +33,8 @@ services:
       context: bothandler
       dockerfile: build/Dockerfile.base
     command: python the_bothandler.py
+    depends_on:
+      - cineclub
     env_file: .env
     restart: always
     user: ${UID}:${GID}
